<resources>
    <string name="app_name">Explore NI</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_home">Home</string>
    <string name="nav_ar">AR</string>
    <string name="nav_plan">Plan</string>
    <string name="nav_favourites">Favourites</string>

    <string name="tb_emergency">Emergency Info</string>
    <string name="tb_settings">Settings</string>
    <string name="tb_favourite">Favourite</string>
    <string name="tb_map">View on map</string>
    <string name="title_activity_settings">Settings</string>

    <string name="tb_sort">Sort</string>
    <string name="tb_filter">Filter</string>
...
