<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Emergency"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All emergency services in Northern Ireland can be contacted through the number below. Tap the number to begin dialling."
        android:textSize="17sp"/>

    <LinearLayout
        android:id="@+id/llNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/rounded_edge_border"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_local_phone_blue_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:autoLink="phone"
            android:linksClickable="true"
            android:text="999"
            android:textSize="35sp"
            android:textColor="@color/colorPrimaryDark"/>


    </LinearLayout>

</LinearLayout>